--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -32,10 +32,10 @@ jobs:
           fi
       - name: Push to ECR
         env:
-          AWS_ACCESS_KEY_ID: ${{ vars.AWS_ACCESS_KEY_ID }}
-          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          AWS_ACCESS_KEY_ID: ${{vars.AWS_ACCESS_KEY_ID}}
+          AWS_SECRET_ACCESS_KEY: ${{secrets.AWS_SECRET_ACCESS_KEY}}
         run: | 
-          aws ecr get-login-password --region eu-west-2 | docker login --username AWS --password-stdin ${{ vars.AWS_ACCOUNT_ID }}.dkr.ecr.eu-west-2.amazonaws.com
+          aws ecr get-login-password --region eu-west-2 | docker login --username AWS --password-stdin ${{vars.AWS_ACCOUNT_ID}}.dkr.ecr.eu-west-2.amazonaws.com
           docker build --compress -t ${{vars.ECR_REPO_APP}}:${GITHUB_SHA} .
           docker push ${{vars.ECR_REPO_APP}}:${GITHUB_SHA}
           docker build --compress -t ${{vars.ECR_REPO_PROXY}}:${GITHUB_SHA} proxy/
@@ -43,10 +43,10 @@ jobs:
 
       - name: Terraform Apply
         env:
-          AWS_ACCESS_KEY_ID: ${{ vars.AWS_ACCESS_KEY_ID }}
-          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          TF_VAR_db_password: ${{ secrets.TF_VAR_DB_PASSWORDDB_PASSWORD }}
-          TF_VAR_django_secret_key: ${{ secrets.TF_VAR_DJANGO_SECRET_KEY }}
+          AWS_ACCESS_KEY_ID: ${{vars.AWS_ACCESS_KEY_ID}}
+          AWS_SECRET_ACCESS_KEY: ${{secrets.AWS_SECRET_ACCESS_KEY}}
+          TF_VAR_db_password: ${{secrets.TF_VAR_DB_PASSWORD}}
+          TF_VAR_django_secret_key: ${{secrets.TF_VAR_DJANGO_SECRET_KEY}}
         run: |
           export TF_VAR_ecr_app_image="${{ vars.ECR_REPO_APP }}:${GITHUB_SHA}"
           export TF_VAR_ecr_proxy_image="${{ vars.ECR_REPO_PROXY }}:${GITHUB_SHA}"
