--- a/.github/workflows/test-and-lint.yml
+++ b/.github/workflows/test-and-lint.yml
@@ -38,13 +38,26 @@ jobs:
           password: ${{ secrets.DOCKERHUB_TOKEN }}
       - name: Checkout code
         uses: actions/checkout@v4
+      - name: set vars
+        run: |
+          if [[ $GITHUB_REF == 'refs/heads/prod' ]]; then
+            echo "prod" > .workspace
+          else
+            echo "staging" > .workspace
+          fi
+          # Export TF_WORKSPACE dynamically
+          workspace=$(cat .workspace)
+          echo "TF_WORKSPACE=$workspace" >> $GITHUB_ENV
+          export TF_WORKSPACE=$workspace
       - name: Terraform lint
         env:
           AWS_ACCESS_KEY_ID: ${{ vars.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           TF_VAR_db_password: ${{ secrets.TF_VAR_DB_PASSWORD }}
           TF_VAR_django_secret_key: ${{ secrets.TF_VAR_DJANGO_SECRET_KEY }}
+          TF_WORKSPACE: ${{ env.TF_WORKSPACE }} # Use the dynamically set workspace
         run: |
+          workspace=$(cat .workspace)
           cd infra/
           docker compose run --rm terraform -chdir=deploy/ init -backend=false
           docker compose run --rm terraform -chdir=setup/ init -backend=false
